crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__grouped_two_line.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: out
---
── grouped · two-line ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                          4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and …   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                    9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                      6h
     team mentioned · discussion #7
    Tracking: plugin manifest schemaVersion 2                                                   1mo
     manual · issue #25
   ShaxP/shax (15)
    M7 slice 1: light theme + Dark/Light/System toggle                                          15m
     author · pull request #11
   CI failed on main                                                                           41m
     ci · check suite #3
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details

── grouped · two-line · ascii ──
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                                          4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and …   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                    9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                                      6h
     team mentioned · discussion #7
    Tracking: plugin manifest schemaVersion 2                                                   1mo
     manual · issue #25
   ShaxP/shax (15)
    M7 slice 1: light theme + Dark/Light/System toggle                                          15m
     author · pull request #11
   CI failed on main                                                                           41m
     ci · check suite #3
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
