crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__state_matrix.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: state_matrix_screens().await
---
── cold ── Notifications  0 unread · 0 total
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ▘ Loading
 No data yet · nothing cached, and no fetch has completed                  not fetched
                                                                         ? help  q quit

── populated ── Notifications  10 unread · 29 total
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                          6h
     team mentioned · discussion #7
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
                                                                         ? help  q quit

── stale ── Notifications  10 unread · 29 total
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                          6h
     team mentioned · discussion #7
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting   cached
                                                                         ? help  q quit

── refreshing ── Notifications  10 unread · 29 total
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                        9m
     commented · issue #29
   RFC: unifying the plugin manifest across shell surfaces                          6h
     team mentioned · discussion #7
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · await  refreshing
                                                                         ? help  q quit

── empty ── Notifications  0 unread · 0 total


                                      All caught up

                          No notification needs your attention.

                                  r  check for new ones



 All caught up · nothing needs your attention
                                                                         ? help  q quit

── filtered-empty ── Notifications  0 unread · 0 total · unread only


                                        No matches

                            Nothing here matches unread only.

                                  u  show read ones too



 No matches · nothing matches unread only
                                                                         ? help  q quit

── offline-with-cache ── Notifications  10 unread · 29 total
  Offline · showing cached data.
   quickshell/quickshell (2)
▸  Add SocketServer reconnect backoff and idle timeout                              4m
     review requested · pull request #1
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive…   8h
     subscribed · pull request #8
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                        9m
     commented · issue #29

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
                                                                         ? help  q quit

── offline-without-cache ── Notifications


                               Offline, and nothing cached

             GitHub is unreachable and this surface has never been fetched.

                                        r  retry



 Offline · and nothing has ever been cached
                                                                         ? help  q quit

── rate-limited ── Notifications


                                GitHub rate limit reached

                   Resets at 12:00 UTC. Cached data is still readable.

                                        r  retry



 GitHub rate limit reached · cached data is still readable
                                                                         ? help  q quit

── forbidden ── Notifications



                                        No access

                 You do not have access to this. It will not be retried.




 No access · this is not retried
                                                                         ? help  q quit

── error ── Notifications


                                     Something failed

                            GitHub returned 502: bad gateway

                                        r  retry



 Something failed · GitHub returned 502: bad gateway
                                                                         ? help  q quit
