crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__state_matrix_ascii.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: "state_matrix_screens(IconVariant::Ascii).await"
---
── cold ── Notifications  0 unread · 0 total
  ----------------------------------------------------------
  ----------------------------------------
  --------------------------------------------------------------------
  ------------------------------------------------
  -----------------------------------------------------
  ----------------------------------------------------------
  ----------------------------------------
  --------------------------------------------------------------------
  ------------------------------------------------
  | Loading
 No data yet - nothing cached, and no fetch has completed                 0 not fetched
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── populated ── Notifications  10 unread · 29 total
>* R Add SocketServer reconnect backoff and idle tim~ ~/quickshell         o pr       4m
 * c Short one                                        ~/an-equally-long-r~ o issue    9m
 * @ Bar widget plugins should be able to declare a ~ basecamp/omarchy     o issue   22m
 * W CI failed on main                                shax                 W checks  41m
 * ^ fix: syntax highlighting follows the Dark/Light~ shax                 o pr       2h
 * & Notifications inbox: decide enrichment strategy  omaghy               o issue    3h
 * c Stabilize `let_chains` in the 2024 edition       rust-lang/rust       o pr       5h
 * D RFC: unifying the plugin manifest across shell ~ ~/an-equally-long-r~ D disc     6h
 * # Refactor the Wayland layer-shell surface lifecy~ ~/quickshell         o pr       8h
 * ! Moderate severity vulnerability in openssl 0.10~ omaghy               ! alert   11h
 > review requested - pull request #1 - quickshell/quickshell - 4m - awaiting details
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── stale ── Notifications  10 unread · 29 total
>* R Add SocketServer reconnect backoff and idle tim~ ~/quickshell         o pr       4m
 * c Short one                                        ~/an-equally-long-r~ o issue    9m
 * @ Bar widget plugins should be able to declare a ~ basecamp/omarchy     o issue   22m
 * W CI failed on main                                shax                 W checks  41m
 * ^ fix: syntax highlighting follows the Dark/Light~ shax                 o pr       2h
 * & Notifications inbox: decide enrichment strategy  omaghy               o issue    3h
 * c Stabilize `let_chains` in the 2024 edition       rust-lang/rust       o pr       5h
 * D RFC: unifying the plugin manifest across shell ~ ~/an-equally-long-r~ D disc     6h
 * # Refactor the Wayland layer-shell surface lifecy~ ~/quickshell         o pr       8h
 * ! Moderate severity vulnerability in openssl 0.10~ omaghy               ! alert   11h
 > review requested - pull request #1 - quickshell/quickshell - 4m - awaiting  t cached
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── refreshing ── Notifications  10 unread · 29 total
>* R Add SocketServer reconnect backoff and idle tim~ ~/quickshell         o pr       4m
 * c Short one                                        ~/an-equally-long-r~ o issue    9m
 * @ Bar widget plugins should be able to declare a ~ basecamp/omarchy     o issue   22m
 * W CI failed on main                                shax                 W checks  41m
 * ^ fix: syntax highlighting follows the Dark/Light~ shax                 o pr       2h
 * & Notifications inbox: decide enrichment strategy  omaghy               o issue    3h
 * c Stabilize `let_chains` in the 2024 edition       rust-lang/rust       o pr       5h
 * D RFC: unifying the plugin manifest across shell ~ ~/an-equally-long-r~ D disc     6h
 * # Refactor the Wayland layer-shell surface lifecy~ ~/quickshell         o pr       8h
 * ! Moderate severity vulnerability in openssl 0.10~ omaghy               ! alert   11h
 > review requested - pull request #1 - quickshell/quickshell - 4m - await % refreshing
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── empty ── Notifications  0 unread · 0 total


                                    =  All caught up

                          No notification needs your attention.

                                  r  check for new ones



 All caught up - nothing needs your attention
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── filtered-empty ── Notifications  0 unread · 0 total · unread only


                                      F  No matches

                            Nothing here matches unread only.

                                  u  show read ones too



 No matches - nothing matches unread only
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── offline-with-cache ── Notifications  10 unread · 29 total
 0 Offline - showing cached data.
>* R Add SocketServer reconnect backoff and idle tim~ ~/quickshell         o pr       4m
 * c Short one                                        ~/an-equally-long-r~ o issue    9m
 * @ Bar widget plugins should be able to declare a ~ basecamp/omarchy     o issue   22m
 * W CI failed on main                                shax                 W checks  41m
 * ^ fix: syntax highlighting follows the Dark/Light~ shax                 o pr       2h
 * & Notifications inbox: decide enrichment strategy  omaghy               o issue    3h
 * c Stabilize `let_chains` in the 2024 edition       rust-lang/rust       o pr       5h
 * D RFC: unifying the plugin manifest across shell ~ ~/an-equally-long-r~ D disc     6h
 * # Refactor the Wayland layer-shell surface lifecy~ ~/quickshell         o pr       8h
 > review requested - pull request #1 - quickshell/quickshell - 4m - awaiting details
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── offline-without-cache ── Notifications


                             0  Offline, and nothing cached

             GitHub is unreachable and this surface has never been fetched.

                                        r  retry



 Offline - and nothing has ever been cached
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── rate-limited ── Notifications


                              T  GitHub rate limit reached

                   Resets at 12:00 UTC. Cached data is still readable.

                                        r  retry



 GitHub rate limit reached - cached data is still readable
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── forbidden ── Notifications



                                      /  No access

                 You do not have access to this. It will not be retried.




 No access - this is not retried
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit

── error ── Notifications


                                   X  Something failed

                            GitHub returned 502: bad gateway

                                        r  retry



 Something failed - GitHub returned 502: bad gateway
 n glyph  p shared  i ascii  w auto:88  t 1-line  m grey  g flat         ? help  q quit
