crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__state_matrix_unicode.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: "state_matrix_screens(IconVariant::Unicode).await"
---
── cold ── Notifications  0 unread · 0 total
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
  ▘ Loading
 No data yet · nothing cached, and no fetch has completed                  not fetched
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── populated ── Notifications  10 unread · 29 total
▸  Add SocketServer reconnect backoff and idle tim… …/quickshell          pr       4m
   Short one                                        …/an-equally-long-r…  issue    9m
   Bar widget plugins should be able to declare a … basecamp/omarchy      issue   22m
   CI failed on main                                shax                  checks  41m
   fix: syntax highlighting follows the Dark/Light… shax                  pr       2h
   Notifications inbox: decide enrichment strategy  omaghy                issue    3h
   Stabilize `let_chains` in the 2024 edition       rust-lang/rust        pr       5h
   RFC: unifying the plugin manifest across shell … …/an-equally-long-r…  disc     6h
   Refactor the Wayland layer-shell surface lifecy… …/quickshell          pr       8h
   Moderate severity vulnerability in openssl 0.10… omaghy                alert   11h
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── stale ── Notifications  10 unread · 29 total
▸  Add SocketServer reconnect backoff and idle tim… …/quickshell          pr       4m
   Short one                                        …/an-equally-long-r…  issue    9m
   Bar widget plugins should be able to declare a … basecamp/omarchy      issue   22m
   CI failed on main                                shax                  checks  41m
   fix: syntax highlighting follows the Dark/Light… shax                  pr       2h
   Notifications inbox: decide enrichment strategy  omaghy                issue    3h
   Stabilize `let_chains` in the 2024 edition       rust-lang/rust        pr       5h
   RFC: unifying the plugin manifest across shell … …/an-equally-long-r…  disc     6h
   Refactor the Wayland layer-shell surface lifecy… …/quickshell          pr       8h
   Moderate severity vulnerability in openssl 0.10… omaghy                alert   11h
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting   cached
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── refreshing ── Notifications  10 unread · 29 total
▸  Add SocketServer reconnect backoff and idle tim… …/quickshell          pr       4m
   Short one                                        …/an-equally-long-r…  issue    9m
   Bar widget plugins should be able to declare a … basecamp/omarchy      issue   22m
   CI failed on main                                shax                  checks  41m
   fix: syntax highlighting follows the Dark/Light… shax                  pr       2h
   Notifications inbox: decide enrichment strategy  omaghy                issue    3h
   Stabilize `let_chains` in the 2024 edition       rust-lang/rust        pr       5h
   RFC: unifying the plugin manifest across shell … …/an-equally-long-r…  disc     6h
   Refactor the Wayland layer-shell surface lifecy… …/quickshell          pr       8h
   Moderate severity vulnerability in openssl 0.10… omaghy                alert   11h
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · await  refreshing
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── empty ── Notifications  0 unread · 0 total


                                      All caught up

                          No notification needs your attention.

                                  r  check for new ones



 All caught up · nothing needs your attention
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── filtered-empty ── Notifications  0 unread · 0 total · unread only


                                        No matches

                            Nothing here matches unread only.

                                  u  show read ones too



 No matches · nothing matches unread only
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── offline-with-cache ── Notifications  10 unread · 29 total
  Offline · showing cached data.
▸  Add SocketServer reconnect backoff and idle tim… …/quickshell          pr       4m
   Short one                                        …/an-equally-long-r…  issue    9m
   Bar widget plugins should be able to declare a … basecamp/omarchy      issue   22m
   CI failed on main                                shax                  checks  41m
   fix: syntax highlighting follows the Dark/Light… shax                  pr       2h
   Notifications inbox: decide enrichment strategy  omaghy                issue    3h
   Stabilize `let_chains` in the 2024 edition       rust-lang/rust        pr       5h
   RFC: unifying the plugin manifest across shell … …/an-equally-long-r…  disc     6h
   Refactor the Wayland layer-shell surface lifecy… …/quickshell          pr       8h
 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting details
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── offline-without-cache ── Notifications


                               Offline, and nothing cached

             GitHub is unreachable and this surface has never been fetched.

                                        r  retry



 Offline · and nothing has ever been cached
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── rate-limited ── Notifications


                                GitHub rate limit reached

                   Resets at 12:00 UTC. Cached data is still readable.

                                        r  retry



 GitHub rate limit reached · cached data is still readable
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── forbidden ── Notifications



                                        No access

                 You do not have access to this. It will not be retried.




 No access · this is not retried
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit

── error ── Notifications


                                     Something failed

                            GitHub returned 502: bad gateway

                                        r  retry



 Something failed · GitHub returned 502: bad gateway
 n glyph  p shared  i unicode  w auto:88  t 1-line  m grey  g flat       ? help  q quit
