crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__notifications__tests__triage_after_marking_read.snap
---
source: crates/omaghy-tui/src/surfaces/notifications.rs
expression: out
---
── grey · Enter j Enter j Enter j ──
   quickshell/quickshell (2)
    Add SocketServer reconnect backoff and idle timeout                                          4m
     review requested · pull request #1 · pr
    Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and …   8h
     subscribed · pull request #8 · pr
   some-very-long-organization-name/an-equally-long-repository-name (3)
    Short one                                                                                    9m
     commented · issue #29 · issue
▸  RFC: unifying the plugin manifest across shell surfaces                                      6h
     team mentioned · discussion #7 · disc

 ▸ team mentioned · discussion #7 · some-very-long-organization-name/an-equally-lo  Marked 1 read

── hide · Enter Enter Enter ──
   quickshell/quickshell (2)
▸   Add SocketServer reconnect backoff and idle timeout                                          4m
     review requested · pull request #1 · pr
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and …   8h
     subscribed · pull request #8 · pr
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                    9m
     commented · issue #29 · issue
   RFC: unifying the plugin manifest across shell surfaces                                      6h
     team mentioned · discussion #7 · disc

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting deta  Marked 1 read

── sink · Enter Enter Enter ──
   quickshell/quickshell (2)
▸   Add SocketServer reconnect backoff and idle timeout                                          4m
     review requested · pull request #1 · pr
   Refactor the Wayland layer-shell surface lifecycle so that anchors, exclusive zones, and …   8h
     subscribed · pull request #8 · pr
   some-very-long-organization-name/an-equally-long-repository-name (3)
   Short one                                                                                    9m
     commented · issue #29 · issue
   RFC: unifying the plugin manifest across shell surfaces                                      6h
     team mentioned · discussion #7 · disc

 ▸ review requested · pull request #1 · quickshell/quickshell · 4m · awaiting deta  Marked 1 read
